tests/print_bad_arg_type.stderr
tests/print_bad_arg_type.sl:3:8: error: SL2004: type mismatch
