tests/print_bad_arg_type.sl
// Verifies print bad argument type.
fn main() {
	print(1)
}
